tree-sitter-tsql/test/corpus/order_by_clause.txt
=================================================
over_by_clause single
=================================================
select RANK() OVER (ORDER BY foo)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (ranking_windowed_function
                            (rank_)
                            (over_clause
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))))))))))

=================================================
over_by_clause multi
=================================================
select RANK() OVER (ORDER BY foo asc,bar desc,baz)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (ranking_windowed_function
                            (rank_)
                            (over_clause
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_)))
                                  (asc_))
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_)))
                                  (desc_))
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))))))))))

=================================================
over_by_clause COLLATE
=================================================
select RANK() OVER (ORDER BY id COLLATE foo)
FROM foo.baz.bar;
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (ranking_windowed_function
                            (rank_)
                            (over_clause
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_)))
                                  (collation_
                                    (id_)))))))))))
                (from_)
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)
                        (id_)
                        (id_)))))))))))))
