tree-sitter-tsql/test/corpus/select_list_elem.txt
=================================================
Select List Elem Asterisk
=================================================
select * from PostTypes
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (asterisk)))
                (from_)
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=================================================
Select List Elem UDT Elem
=================================================
select foo.bar(@baz,@quux)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (udt_elem
                      (id_)
                      (id_)
                      (udt_method_arguments
                        (execute_var_string
                          (LOCAL_ID_))
                        (execute_var_string
                          (LOCAL_ID_))))))))))))))

=================================================
Select List Elem LocalID Expr
=================================================
select @foo=baz
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (LOCAL_ID_)
                    (expression
                      (full_column_name
                        (id_)))))))))))))

=================================================
Select List Elem expression_elem
=================================================
select 3
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (primitive_expression
                          (primitive_constant
                            (decimal_)))))))))))))))
