tree-sitter-tsql/test/corpus/udt_elem.txt
=====================================
udt_elem dot method
=====================================
Select foo.bar(@baz)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (udt_elem
                      (id_)
                      (id_)
                      (udt_method_arguments
                        (execute_var_string
                          (LOCAL_ID_))))))))))))))

=====================================
udt_elem dot method full
=====================================
Select foo::bar(@baz) as quux
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (udt_elem
                      (id_)
                      (id_)
                      (udt_method_arguments
                        (execute_var_string
                          (LOCAL_ID_)))
                      (as_column_alias
                        (as)
                        (column_alias
                          (id_))))))))))))))

=====================================
udt_elem dot method opt
=====================================
Select foo::bar as quux
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (udt_elem
                      (id_)
                      (id_)
                      (as_column_alias
                        (as)
                        (column_alias
                          (id_))))))))))))))
